Name:           Lsl
Version:        0.1
Cabal-Version:  >= 1.2
License:        BSD3
License-file:   LICENSE
Author:         Robert Greayer
Synopsis:       Programs supporting compiling/testing LSL code
Build-Type:     Simple

Executable Compiler
  Build-Depends:  base, haskell98, filepath >= 1.1.0.0, parsec >= 2.1.0.0, HaXml >= 1.19.2, directory, mtl >= 1.1, old-time
  Main-Is:        CompilerMain.hs
  Hs-Source-Dirs: .
  Ghc-Options: -fglasgow-exts

Executable MetaData
  Build-Depends:  base, haskell98, filepath >= 1.1.0.0, parsec >= 2.1.0.0, HaXml >= 1.19.2, directory, mtl >= 1.1, old-time
  Main-Is:        MetaDataMain.hs
  Hs-Source-Dirs: .
  Ghc-Options: -fglasgow-exts

Executable UnitTester
  Build-Depends:  base, haskell98, filepath >= 1.1.0.0, parsec >= 2.1.0.0, HaXml >= 1.19.2, directory, mtl >= 1.1,
                  network >= 2.1, random >= 1.0
  Main-Is:        UnitTesterMain.hs
  Hs-Source-Dirs: .
  Ghc-Options: -fglasgow-exts

Executable ExpressionHandler
  Build-Depends:  base, haskell98, filepath >= 1.1.0.0, parsec >= 2.1.0.0, HaXml >= 1.19.2, directory, mtl >= 1.1,
                  network >= 2.1, random >= 1.0
  Main-Is:        ExpressionHandlerMain.hs
  Hs-Source-Dirs: .
  Ghc-Options: -fglasgow-exts
