Name:           Lsl
Version:        0.1
Cabal-Version:  >= 1.2
License:        BSD3
License-file:   LICENSE
Author:         Robert Greayer
Synopsis:       Programs supporting compiling/testing LSL code
Build-Type:     Simple

Executable LslPlus
  Build-Depends:  base, haskell98, filepath >= 1.1.0.0, parsec >= 2.1.0.0, HaXml >= 1.19.2, directory, mtl >= 1.1,
                  network >= 2.1, random >= 1.0, containers >= 0.1, QuickCheck >= 1.1.0.0, old-time, utf8-string >= 0.3.1,
                  pureMD5 >= 0.1.2, bytestring > 0.9
  Main-Is:        LslPlus.hs
  Hs-Source-Dirs: .
  Ghc-Options:    -fglasgow-exts
  